added style to update.html

--- a/core/templates/update.html
+++ b/core/templates/update.html
@@ -5,6 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          background-color: linen;
+          text-align: center;
+        }
+        
+        ul {
+            list-style-type: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: maroon;
+        }
+
+        a 
+
+        h1 {
+          color: maroon;
+          margin-left: 40px;
+        }
+        </style>
 </head>
 <body>
     <h2>Editar</h2>
